Update .gitignore for modern Python development

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,89 @@
-build/
-Ultima/
-.idea/
-output/
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.db
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+PIPFILE.lock
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDEs
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Project specific
+Ultima/
+output/
 input/
-main.py
 files/
 environment.ini
-dist/
-ultimapy.egg-info/
-.local/
-pypi-release.sh
+*.db
+main.py
 test.py
+pypi-release.sh
+.local/
+
+# Ruff
+.ruff_cache/
