--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,29 +14,35 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -e .[dev]
-    
-    - name: Lint with ruff
+
+    - name: Run tests
       run: |
-        ruff check .
-    
-    - name: Check formatting with black
+        pytest -v
+
+    - name: Lint with ruff (non-blocking)
       run: |
-        black --check .
-    
-    - name: Type check with mypy
+        ruff check . || true
+      continue-on-error: true
+
+    - name: Check formatting with black (non-blocking)
+      run: |
+        black --check . || true
+      continue-on-error: true
+
+    - name: Type check with mypy (non-blocking)
       run: |
         mypy ultimapy || true
       continue-on-error: true
@@ -44,26 +50,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: test
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
-    
+
     - name: Install build dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build twine
-    
+
     - name: Build package
       run: python -m build
-    
+
     - name: Check package
       run: twine check dist/*
-    
+
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
